# pynetcode

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py  vcpkg.json
conda.recipe/: meta.yaml
include/: pynetcode.h
source/: pynetcode.cpp
